removed the .db files

--- a/lang-chain/two_langchain-LLMs.ipynb
+++ b/lang-chain/two_langchain-LLMs.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "id": "6ad52729-af98-427f-9d56-f8a1559cab0c",
    "metadata": {
     "tags": []
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "id": "694922b0-4274-4e07-98fb-4812693408c7",
    "metadata": {
     "tags": []
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "de2d7ba0-403e-430e-8f56-bc57a43aeab6",
    "metadata": {
     "tags": []
@@ -762,17 +762,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 35 ms, sys: 8.99 ms, total: 44 ms\n",
-      "Wall time: 1.37 s\n"
+      "CPU times: user 35.8 ms, sys: 12.3 ms, total: 48.1 ms\n",
+      "Wall time: 1.71 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\\n\\nThe universe is expanding at an ever-increasing rate.'"
+       "'\\n\\nSome scientific fun facts are:\\n\\n-The average person has about 100,000 hairs on their head.\\n\\n-The human heart beats about 100,000 times a day.\\n\\n-The average person breathes about 23,000 times a day.\\n\\n-The average person blinks about 15 times a minute.'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "68ed4606-5098-4449-9b2f-f7967333c1a0",
    "metadata": {
     "tags": []
@@ -795,17 +795,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.42 ms, sys: 1.55 ms, total: 3.97 ms\n",
-      "Wall time: 2.51 ms\n"
+      "CPU times: user 2.3 ms, sys: 1.3 ms, total: 3.6 ms\n",
+      "Wall time: 2.33 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'\\n\\nThe universe is expanding at an ever-increasing rate.'"
+       "'\\n\\nSome scientific fun facts are:\\n\\n-The average person has about 100,000 hairs on their head.\\n\\n-The human heart beats about 100,000 times a day.\\n\\n-The average person breathes about 23,000 times a day.\\n\\n-The average person blinks about 15 times a minute.'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
