--- a/lang-chain/one_quick-start.ipynb
+++ b/lang-chain/one_quick-start.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6dd67efb-4a22-48d2-af7e-f1ada383cb53",
+   "metadata": {},
+   "source": [
+    "## This notebook has the following topics -\n",
+    "1. Use langchain to run an LLM\n",
+    "2. Combines LLMs and Prompts in a Chain\n",
+    "3. Dynamically calling chains based on user inputs using tool, llm and agent\n",
+    "4. Adding state / memory to chains & agents\n",
+    "5. Building a chat app using Chat Prompts\n",
+    "6. Chat Prompt Templates\n",
+    "7. Chains with Chat Models\n",
+    "8. Chains with Chat Models using state / memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bd33868-2a8e-4ec6-bee2-07995249038c",
    "metadata": {
     "tags": []
