--- a/lang-chain/one_quick-start.ipynb
+++ b/lang-chain/one_quick-start.ipynb
@@ -963,9 +963,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "global_venv",
    "language": "python",
-   "name": "python3"
+   "name": "global_venv"
   },
   "language_info": {
    "codemirror_mode": {
